panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__parse_error__test_error_integer_instead_of_identifier.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - panko/tests/cases/parse_error/test_error_integer_instead_of_identifier.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: unrecognised token
   ╭─[panko/tests/cases/parse_error/test_error_integer_instead_of_identifier.c:1:5]
   │
 1 │ int 42;
   │     ─┬  
   │      ╰── expected one of the following token kinds: ["(", "*", ";", "_Atomic", "_Complex", "_Decimal128", "_Decimal32", "_Decimal64", "_Noreturn", "auto", "bool", "char", "const", "constexpr", "double", "extern", "float", "inline", "int", "long", "register", "restrict", "short", "signed", "static", "thread_local", "typedef", "unsigned", "void", "volatile", Identifier]
───╯
